--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>
             Greeshma
         </title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="icon" href="logo.ico">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://fonts.googleapis.com">
