--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="topcontainer">
-            <img class="logo"src="logo.ico">
+            <img class="logo"src="difficulties.png">
             <a  class="about" href="about.html"> About</a>
             <a class="work" href="work.html"> Work</a>
             <a class="note" href="notes.html"> Notes</a>
